# pokemon-tcg-meta-anki

./: .gitignore  AGENTS.md  DATA_DICTIONARY.md  DESIGN_SPEC.md  HANDOFF_CONTENTS.md  HANDOFF_PROMPT.md  LICENSE_NOTES.md  MANIFEST.sha256  MECHANICAL_IDENTITY.md  Makefile  PACKAGE_MANIFEST.json  PROVENANCE.md  README.md  UPDATE_PROCEDURE.md  pyproject.toml  requirements.txt  uv.toml
cache/: README.md
data/: archetypes_top50.csv  art_crop_overrides.csv  card_candidates_with_tags_361.csv  card_locator_archetype_membership.csv  card_source_locators_top10_145.csv  card_source_locators_top50_361.csv  competitive_role_overrides.csv  display_label_overrides.csv  manual_mechanical_merge_overrides.csv  natural_key_registry.csv  representative_deck_entries.csv  representative_decks.json  rulings_overrides.csv  set_catalog.csv  set_code_overrides.csv  snapshot_counts.json  source_manifest.json
media/: README.md
reports/: README.md  anki_build_summary.json  artwork_crop_audit.csv  artwork_crop_failures.csv  artwork_crop_summary.json  mechanical_merges.csv  mechanical_pool_summary.json  media_failures.csv  media_summary.json  printing_discovery_summary.json  resolution_summary.json  resolved_pool_validation.json  source_validation.json  unresolved_source_locators.csv  validation_report.md
schemas/: anki_energy.schema.json  anki_note_models.json  anki_pokemon.schema.json  anki_set.schema.json  anki_trainer.schema.json  mechanical_card.schema.json  source_card.schema.json
scripts/: build_anki.py  common.py  crop_artwork.py  decode_limitless_builder.py  download_media.py  (+8 more)
(+17 files in other folders)
